@@ -90,7 +90,8 @@ I<Amazon Elastic Compute Cloud User Guide>.
   
 
 If the value is C<true>, you can't terminate the instance using the
-Amazon EC2 console, CLI, or API; otherwise, you can.
+Amazon EC2 console, CLI, or API; otherwise, you can. You cannot use
+this paramater for Spot Instances.
 
 
 
@@ -298,7 +299,7 @@ Changes the instance's user data to the specified value.
 
 A new value for the attribute. Use only with the C<kernel>, C<ramdisk>,
 C<userData>, C<disableApiTermination>, or
-C<intanceInitiateShutdownBehavior> attribute.
+C<instanceInitiatedShutdownBehavior> attribute.
 
 
 
